--- a/elm/assets/css/style.css
+++ b/elm/assets/css/style.css
@@ -1,32 +1,32 @@
-/*html, body {*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*}*/
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
 
-/*body {*/
-/*  font-family: Roboto, Arial, sans-serif;*/
-/*  width: 100%;*/
-/*}*/
+body {
+  font-family: Roboto, Arial, sans-serif;
+  width: 100%;
+}
 
-/*button {*/
-/*  border: none;*/
-/*  box-shadow: rgba(0,0,0,0.25) 0px 2px 4px 0px;*/
-/*  color: #757575;*/
-/*  cursor: pointer;*/
-/*  font-size: 24px;*/
-/*  height: 3em;*/
-/*  margin: 0.5em 0;*/
-/*  outline: none;*/
-/*  padding: 0 1em 0 4em;*/
-/*  text-align: right;*/
-/*  width: 10em;*/
-/*}*/
+button {
+  border: none;
+  box-shadow: rgba(0,0,0,0.25) 0px 2px 4px 0px;
+  color: #757575;
+  cursor: pointer;
+  font-size: 24px;
+  height: 3em;
+  margin: 0.5em 0;
+  outline: none;
+  padding: 0 1em 0 4em;
+  text-align: right;
+  width: 10em;
+}
 
-/*button::-moz-focus-inner {*/
-/*  border: 0;*/
-/*}*/
+button::-moz-focus-inner {
+  border: 0;
+}
 
 img.avatar {
   height: 15em;
